# topview-thermal--reconstruction

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
docs/: REPOSITORY_LAYOUT.md  REPRODUCTION_GUIDE.md  SUBMISSION_CHECKLIST.md
notebooks/: TOPVIEW_Colab_Workflow.ipynb
src/topview/: __init__.py  baselines.py  clouds.py  config.py  datasets.py  drive.py  evaluation.py  io.py  legacy_manifest.py  manifest.py  reporting.py  splits.py  training.py  utils.py
src/topview/cli/: __init__.py  audit_thermal_inputs.py  build_manifest.py  build_thesis_tables.py  evaluate_methods.py  import_legacy_inventory.py  prepare_splits.py  run_real_cloud_inference.py  stage_to_local.py  sync_artifacts_to_drive.py  train_diffusion.py  train_unet.py
src/topview/models/: __init__.py  diffusion.py  unet.py
