[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topview-thermal-reconstruction"
version = "0.1.0"
description = "TOPVIEW thermal cloud-gap reconstruction pipeline for Google Colab"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
